<resources>
    <string name="settings_name">Settings</string>
    <string name="tab_week">Week</string>
    <string name="tab_inbox">Inbox</string>
    <string name="tab_details">Details</string>
    <string name="tab_questions">Questions</string>
    <string name="tab_submissions">Submissions</string>
    <string name="tab_assignments">Assignments</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_people">People</string>
    <string name="tab_quizzes">Quizzes</string>
    <string name="tab_discussions">Discussions</string>
    <string name="tab_announcements">Announcements</string>
    <string name="tab_attendance">Attendance</string>
    <string name="tab_pages">Pages</string>
    <string name="tab_todo">To Do</string>
    <string name="content_description_school_logo">School Logo</string>
    <string name="search_guides">Search the Canvas Guides</string>
    <string name="canvas_guides">Canvas Guides</string>
    <string name="search_guides_icon">Icon for Canvas Guides</string>
    <string name="search_guides_details">Answers to frequently asked questions</string>
    <string name="report_problem">Report a Problem</string>
    <string name="report_problem_icon"> Icon for Report a Problem</string>
    <string name="report_problem_details">If the app misbehaves, let us know</string>
    <string name="request_feature">Request a Feature</string>
    <string name="request_feature_icon">Icon for Request a Feature</string>
    <string name="request_feature_details">Let us know your idea to improve the app</string>
    <string name="share_your_love">Share Your Love for the App</string>
    <string name="share_your_love_details">Tell us about your favorite parts of the app</string>
    <string name="masquerade">Masquerade</string>
    <string name="issue_with_teacher_app">Issue with Teacher App [Android]</string>
    <string name="no_items_to_display_short">No items</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="rate_the_app_icon">Icon for Rate the app</string>
    <string name="teacher_log_out">Log Out</string>
    <string name="teacher_switch_user">Switch User</string>
    <string name="under_construction">Under Construction</string>
    <string name="toolbar_event">Event</string>
    <string name="location">Location</string>
    <string name="event_date">Event Date</string>
    <string name="course">Course</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="share_with">Share With&#8230;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_subject">(no subject)</string>
    <string name="compose_message">Compose message</string>
    <string name="newMessage">New Message</string>
    <string name="courses">Courses</string>
    <string name="compose_message_no_ellipsis">Compose Message</string>
    <string name="send">Send</string>
    <string name="attachment">Attachment</string>
    <string name="attachments">Attachments</string>
    <string name="not_available_offline">Functionality unavailable while offline</string>
    <string name="empty_message">The message cannot be blank!</string>
    <string name="message_has_no_recipients">This message currently has no recipients.</string>
    <string name="course_spinner_title">Course:</string>
    <string name="reply_to_message">Reply</string>
    <string name="forward_message">Forward Message</string>
    <string name="label_to">To</string>
    <string name="label_course">Course</string>
    <string name="label_subject">Subject</string>
    <string name="common_send">Send</string>
    <string name="common_edit">Edit</string>
    <string name="feature_subject">Idea for Teacher App [Android]</string>
    <string name="understand_request">The following information will help us better understand your idea:</string>
    <string name="send_mail">Send Email&#8230;</string>
    <string name="color_1">Red</string>
    <string name="color_2">Hot Pink</string>
    <string name="color_3">Lavender</string>
    <string name="color_4">Violet</string>
    <string name="color_5">Purple</string>
    <string name="color_6">Slate</string>
    <string name="color_7">Blue</string>
    <string name="color_8">Cyan</string>
    <string name="color_9">Green</string>
    <string name="color_10">Chartreuse</string>
    <string name="color_11">Yellow</string>
    <string name="color_12">Gold</string>
    <string name="color_13">Orange</string>
    <string name="color_14">Pink</string>
    <string name="color_15">Gray</string>
    <string name="attachment_icon">Attachment Icon</string>
    <string name="star_icon">Star Icon</string>
    <string name="monologue">Monologue</string>
    <string name="create_announcement_topic_title_hint">Topic Title</string>
    <string name="post_date">Post Date</string>
    <string name="announcement">Announcement</string>
    <string name="create_announcement_title">New Announcement</string>
    <string name="create_announcement_no_description">A description is required</string>
    <string name="announcementDetails">Announcement Details</string>
    <string name="no_title">No Title</string>
    <string name="announcement_create_success">Announcement Created!</string>
    <string name="announcement_create_fail">Unable to create announcement. Please check your connection and try again.</string>
    <string name="create_announcement_delay_posting">Delay Posting</string>
    <string name="discussion">Discussion</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="content_description_files">File icon</string>
    <string name="next">Next</string>
    <string name="upload_to_cnavas">Upload To Canvas</string>
    <string name="upload_my_files">My Files</string>
    <string name="upload_course_files">Course Files</string>
    <string name="upload_to">Upload To</string>
    <string name="message_attachments">Message Attachments</string>
    <string name="with">with</string>
    <string name="discussion_attachment">Attach a file</string>
    <string name="select_files_or_photos">Select files or photos</string>
    <string name="uploading_files">Uploading files&#8230;</string>
    <string name="no_attachment">(No Attachment)</string>
    <string name="creating_announcement">Creating Announcement&#8230;</string>
    <string name="copy_email">Copy email address</string>
    <string name="all_grading_periods">All Grading Periods</string>
    <string name="no_submissions">No submissions</string>
    <string name="all_submissions_graded">All submissions graded</string>
    <string name="icon">icon</string>
    <plurals name="grading_status_assignment">
        <item quantity="one">%d submission needs grading</item>
        <item quantity="other">%d submissions need grading</item>
    </plurals>
    <plurals name="assignees_without_grades">
        <item quantity="one">There is %d assignee without a grade.</item>
        <item quantity="other">There are %d assignees without grades.</item>
    </plurals>
    <string name="inbox_empty_title">No messages</string>
    <string name="inbox_empty_starred_title">No Starred Messages</string>
    <string name="inbox_empty_message">Tap the \"+\" to create a new conversation.</string>
    <string name="inbox_empty_starred_message">Star messages by tapping the star in the message.</string>
    <string name="reply">Reply</string>
    <string name="replyAll">Reply All</string>
    <string name="forward">Forward</string>
    <string name="star">Star</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="unarchive">Unarchive</string>
    <string name="message_options">Message Options</string>
    <string name="markAsUnread">Mark As Unread</string>
    <string name="message_delete_warning">Are you sure you want to delete your copy of this message? This action cannot be undone.</string>
    <string name="conversation_delete_warning">Are you sure you want to delete your copy of this conversation? This action cannot be undone.</string>
    <string name="error_conversation_generic">Unable to perform this action. Please check your connection and try again.</string>
    <string name="message_archived">Message archived</string>
    <string name="message_unarchived">Message unarchived</string>
    <string name="message_deleted">Message deleted</string>
    <string name="select_recipients">Select Recipients</string>
    <string name="entire_group_selected">Entire group selected</string>
    <string name="no_users_in_group">No users in group</string>
    <string name="published">Published</string>
    <string name="not_published">Unpublished</string>
    <string name="published_content_description">Published check mark</string>
    <string name="points_with_value">points</string>
    <string name="point_with_value">point</string>
    <string name="no_due_date">No Due Date</string>
    <string name="due_date">Due Date</string>
    <string name="view_replies">View Replies</string>
    <string name="view_discussion">View Discussion</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="inbox_unread">Unread</string>
    <string name="inbox_starred">Starred</string>
    <string name="inbox_sent">Sent</string>
    <string name="inbox_archived">Archived</string>
    <string name="inbox_all_messages">All</string>
    <string name="save_comment">Save comment</string>
    <string name="cancel_editing_comment">Cancel editing comment</string>
    <string name="colorPickerDialogMessage">This is your personal color setting. Only you will see this color for the course.</string>
    <string name="contentDescriptionColorCottonCandy">Pink</string>
    <string name="contentDescriptionColorBarbie">Hot Pink</string>
    <string name="contentDescriptionColorBarneyPurple">Violet</string>
    <string name="contentDescriptionColorEggplant">Purple</string>
    <string name="contentDescriptionColorUltramarine">Dark Blue</string>
    <string name="contentDescriptionColorOcean11">Blue</string>
    <string name="contentDescriptionColorCyan">Cyan</string>
    <string name="contentDescriptionColorAquaMarine">Aqua Blue</string>
    <string name="contentDescriptionColorEmeraldGreen">Emerald Green</string>
    <string name="contentDescriptionColorFreshCutLawn">Green</string>
    <string name="contentDescriptionColorChartreuse">Chartreuse</string>
    <string name="contentDescriptionColorSunFlower">Yellow</string>
    <string name="contentDescriptionColorTangerine">Orange</string>
    <string name="contentDescriptionColorBloodOrange">Dark Orange</string>
    <string name="contentDescriptionColorSriracha">Red</string>
    <string name="quizStatusPendingReview">Pending Review</string>
    <string name="speedGraderQuizSubmission">Quiz Submission</string>
    <string name="viewQuizSubmission">View Submission</string>
    <string name="gradeQuizSubmission">Grade Submission</string>
    <string name="messageThisStudent">Message this student</string>
    <string name="scrollInstructions">Scroll to see all details</string>
    <string name="calendar">Calendar</string>
    <string name="replay">Replay</string>
    <string name="startRecordingAudio">Start recording audio</string>
    <string name="stopRecordingAudio">Stop recording audio</string>
    <string name="startRecordingVideo">Start recording video</string>
    <string name="stopRecordingVideo">Stop recording video</string>
</resources>