<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:padding="6dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colorPickerDialogMessage"
        style="@style/TextFont.Regular"
        android:textColor="@color/textLightGray"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorCottonCandy"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorCottonCandy"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorBarbie"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorBarbie"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorBarneyPurple"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorBarneyPurple"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorEggplant"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorEggplant"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorUltramarine"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorUltramarine"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorOcean11"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorOcean11"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorCyan"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorCyan"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorAquaMarine"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorAquaMarine"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorEmeraldGreen"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorEmeraldGreen"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorFreshCutLawn"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorFreshCutLawn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorChartreuse"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorChartreuse"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorSunFlower"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorSunFlower"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorTangerine"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorTangerine"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorBloodOrange"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorBloodOrange"/>

        <com.instructure.pandautils.views.ColorPickerIcon
            android:id="@+id/colorSriracha"
            style="@style/ColorPickerDialogItem"
            android:contentDescription="@string/contentDescriptionColorSriracha"/>

    </LinearLayout>

</LinearLayout>