<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/inbox_all"
        app:showAsAction="always"
        android:title="@string/inbox_all_messages"/>

    <item
        android:id="@+id/inbox_unread"
        app:showAsAction="always"
        android:title="@string/inbox_unread"/>

    <item
        android:id="@+id/inbox_starred"
        app:showAsAction="always"
        android:title="@string/inbox_starred"/>

    <item
        android:id="@+id/inbox_sent"
        app:showAsAction="always"
        android:title="@string/inbox_sent"/>

    <item
        android:id="@+id/inbox_archived"
        app:showAsAction="always"
        android:title="@string/inbox_archived"/>
</menu>