<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 - present Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cameraView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recordingViewHeight"
    android:background="@color/backgroundLight">

    <ImageView
        android:id="@+id/recordAudioButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_record_media"
        android:contentDescription="@string/startRecordingAudio"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/stopButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_stop_record_media"
        android:contentDescription="@string/stopRecordingAudio"
        android:visibility="gone" />

    <Button
        android:id="@+id/replayAudioButton"
        style="@style/FloatingRecorderReplayButtonStyle"
        android:text="@string/replay"
        android:visibility="gone" />

    <Button
        android:id="@+id/sendAudioButton"
        style="@style/FloatingRecorderSendButtonStyle"
        android:text="@string/send"
        android:visibility="gone" />

</RelativeLayout>