<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_courses"
        android:title="@string/dashboard"
        android:icon="@drawable/bottom_nav_dashboard"
        android:checked="true" />

    <item
        android:id="@+id/tab_calendar"
        android:icon="@drawable/bottom_nav_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/tab_todo"
        android:title="@string/tab_todo"
        android:icon="@drawable/bottom_nav_todo" />

    <item
        android:id="@+id/tab_inbox"
        android:title="@string/tab_inbox"
        android:icon="@drawable/bottom_nav_inbox" />

</menu>
