<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:contentDescription="@string/scrollInstructions">

        <ImageView
            android:id="@+id/quizIconView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            android:tint="@color/textLight"
            app:srcCompat="@drawable/ic_quiz"/>

        <TextView
            android:id="@+id/quizSubmissionLabelView"
            style="@style/TextFont.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/speedGraderQuizSubmission"
            android:textColor="@color/textDarkest"
            android:textSize="20sp"
            android:focusable="true"
            android:importantForAccessibility="yes"/>

        <TextView
            android:id="@+id/pendingReviewLabel"
            style="@style/TextFont.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/quizStatusPendingReview"
            android:textColor="@color/textDark"
            android:textSize="12sp"
            android:visibility="invisible"
            tools:visibility="visible"
            android:focusable="true"
            android:importantForAccessibility="yes"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="32dp"/>

        <Button
            android:id="@+id/gradeQuizButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:text="@string/gradeQuizSubmission"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/viewQuizButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:text="@string/viewQuizSubmission"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>
