<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 - present Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/markAsUnread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/vd_checkmark"
        android:drawablePadding="32dp"
        android:drawableTint="#2D3B45"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingTop="26dp"
        android:paddingBottom="18dp"
        android:text="@string/markAsUnread"
        android:textColor="#2D3B45"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/vd_edit"
        android:drawablePadding="32dp"
        android:drawableTint="#2D3B45"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:text="@string/edit"
        android:textColor="#2D3B45"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/markAsUnread" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/vd_trash"
        android:drawablePadding="32dp"
        android:drawableTint="#2D3B45"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:text="@string/delete"
        android:textColor="#2D3B45"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>